2006-02-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http.erl: Authentication check moved to
	ejabberd_web.erl
	* src/web/ejabberd_web.erl: Likewise

	* src/web/Makefile.in: Added ejabberd_http.hrl dependency

	* src/web/ejabberd_http_poll.erl: Updated to use {active, once}
	socket mode

	* src/mod_irc/mod_irc.erl: Updated to use gen_server behaviour and
	ejabberd supervision tree
	* src/mod_irc/mod_irc_connection.erl: Likewise

2006-02-02  Mickael Remond  <mickael.remond@process-one.net>

	* src/configure.ac: --prefix option can now override the default
	install dir
	* src/configure: Likewise
	* src/Makefile.in: Likewise

2006-02-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Updated to use gen_server
	behaviour and ejabberd supervision tree
	* src/mod_echo.erl: Likewise

2006-02-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Added a supervisor for conference room
	processes
	* src/mod_muc/mod_muc_room.erl: Likewise

2006-01-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: Fixed syntax error

2006-01-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_router.erl: Updated to use gen_server behaviour
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_s2s.erl: Likewise
	* src/gen_iq_handler.erl: Likewise

	* src/ejabberd_sup.erl: Added supervisor for ejabberd_receiver
	* src/ejabberd_receiver.erl: Updated

2006-01-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_update.erl: Support for run-time ejabberd updating
	(not completed)
	* src/ejabberd_c2s.erl: Added 'update_info' module attribute for
	testing ejabberd_update

2006-01-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Remove top-level xmlns from incoming
	stanzas
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd_service.erl: Likewise

	* src/ejabberd_c2s.erl: Better error handling for stream
	compression support (thanks to Sergei Golovan)

2006-01-24  Alexey Shchepin  <alexey@sevcom.net>
